# Auth_1

./: .env.sample  Dockerfile  README.md  alembic.ini  cli.py  docker-compose.yml  docker-entrypoint.sh  exceptions.py  nginx.conf  pyproject.toml
alembic/: env.py
alembic/versions/: 1501e771497b_add_model_role.py  2a32e3076638_change_user_add_again_password_and_email.py  7160c377332d_initial_migration.py  a6ac894dfae6_add_model_login_history.py
configs/: site.conf
src/: main.py
src/core/: config.py
src/db/: postgres.py
src/handlers/: user_roles.py  users.py
src/models/: user.py
src/schemas/: login_history.py  user_roles.py  users.py
src/services/: login_history.py  token.py  user.py  user_roles.py
tests/: conftest.py
tests/functional/: test_token.py  test_user.py
